--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,6 +21,9 @@
         <ion-item menu-close ng-click="login()">
           Login
         </ion-item>
+        <ion-item menu-close href="#/app/states">
+          Select Exam
+        </ion-item>
         <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
