Deleted stale links

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,7 +24,7 @@
         <ion-item menu-close href="#/app/states">
           Select Exam
         </ion-item>
-        <ion-item menu-close href="#/app/search">
+        <!-- <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
         <ion-item menu-close href="#/app/browse">
@@ -32,7 +32,7 @@
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
           Playlists
-        </ion-item>
+        </ion-item> -->
       </ion-list>
     </ion-content>
   </ion-side-menu>
