Localdb integration k wat?

--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,14 +1,8 @@
 <ion-view view-title="NPTEL Exam Checklist">
   <ion-content class="text-center">
 
-    add two buttons here. <br/>
+    <button class="button button-block button-positive" ng-click="update()">Update</button>
 
-    load data from server<br/>
 
-    show saved answers<br/>
-
-    if user is not logged in, ask to login from menu<br/>
-
-    
   </ion-content>
 </ion-view>
