Add basic functionality

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -19,7 +19,10 @@
         <label class="item">
           <button class="button button-block button-positive" type="submit">{{button}}</button>
         </label>
+
       </div>
     </form>
+    <button class="button button-block button-warning" ng-click="modal.hide()">Cancel</button>
+    
   </ion-content>
 </ion-modal-view>
