--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Questions">
+<ion-view view-title="Questions - {{session.session.name}}">
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="question in questions">
@@ -15,40 +15,41 @@
         <ion-label ng-if="question.type == 'long_text'" floating>{{question.text}}</ion-label>
         <ion-textarea ng-if="question.type == 'long_text'"></ion-textarea> -->
 
-        <label class="item" ng-if="question.type == 'heading'">
+        <label class="item item-text-wrap" ng-if="question.type == 'heading'">
           <span><b>{{question.text}}</b></span>
         </label>
 
-        <label class="item item-input item-stacked-label" ng-if="question.type == 'short_text'">
+        <label class="item item-input item-stacked-label item-text-wrap" ng-if="question.type == 'short_text'">
           <span class="input-label">{{question.text}}</span>
           <input type="text" ng-model="answers[question.id]">
         </label>
 
-        <ion-toggle ng-if="question.type == 'boolean'" toggle-class="toggle-calm">{{question.text}}</ion-toggle>
+        <ion-toggle class="item item-text-wrap" ng-if="question.type == 'boolean'"
+        ng-model="answers[question.id]" toggle-class="toggle-calm">{{question.text}}</ion-toggle>
 
-        <label class="item item-input item-stacked-label" ng-if="question.type == 'long_text'">
+        <label class="item item-input item-stacked-label item-text-wrap" ng-if="question.type == 'long_text'">
           <span class="input-label">{{question.text}}</span>
           <textarea ng-model="answers[question.id]"></textarea>
         </label>
 
-        <label class="item item-input item-stacked-label" ng-if="question.type == 'number'">
+        <label class="item item-input item-stacked-label item-text-wrap" ng-if="question.type == 'number'">
           <span class="input-label">{{question.text}}</span>
           <input type="number" ng-model="answers[question.id]">
         </label>
 
-        <label class="item item-input item-stacked-label" ng-if="question.type == 'timestamp'">
+        <label class="item item-input item-stacked-label item-text-wrap" ng-if="question.type == 'timestamp'">
           <span class="input-label">{{question.text}}</span>
-          <input type="time" ng-model="answers[question.id]">
+          <input type="text" placeholder="HH:MM am/pm" ng-model="answers[question.id]">
         </label>
 
       </ion-item>
 
     </ion-list>
 
-    <button class="button button-full button-positive">
+    <button class="button button-full button-positive" ng-click="save()">
       Save
     </button>
 
-    
+
   </ion-content>
 </ion-view>
