--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,21 +1,27 @@
 <ion-view view-title="NPTEL Exam Checklist">
-  <ion-content class="text-center">
+  <div class="bar bar-subheader">
+    <div class="button-bar">
+      <a class="button button-positive" ng-click="loadData()" ng-if="!localdb.hasData()">Load Data</a>
+      <!-- <a class="button button-calm" ng-click="loadData()" ng-if="localdb.hasData()">Reload Data</a> -->
+      <a class="button button-assertive" ng-click="loadData()" ng-if="localdb.hasData()">Reload Data</a>
+
+      <!-- <a class="button">Third</a> -->
+    </div>
+  </div>
+  <ion-content class="has-subheader">
 
     <div ng-show="!localdb.hasData()">
       No sessions
     </div>
     <div ng-show="localdb.hasData()">
       <ion-list>
-        <ion-item class="text-center item item-text-wrap" ng-repeat="sn in sessions" href="#/app/questions/{{sn.id}}">
+        <ion-item class="item item-text-wrap" ng-repeat="sn in sessions" href="#/app/questions/{{sn.id}}">
+          <i class="ion-checkmark-circled" ng-if="localdb.isSynced(sn.id)" style="color: green;"></i>
+          <i class="ion-close-circled" ng-if="!localdb.isSynced(sn.id)" style="color: red;"></i>
           {{sn.session.name}} on {{sn.session.date}} at {{sn.center.name}}
         </ion-item>
       </ion-list>
     </div>
-
-    <button class="button button-block button-positive" ng-click="loadData()" >
-      <span ng-show="!localdb.hasData()">Load data</span><span ng-show="localdb.hasData()">Reload data (unsynced changes will be lost)</span>
-    </button>
-
 
   </ion-content>
 </ion-view>
