Update announcements page

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/main">
           Session
         </ion-item>
+        <ion-item menu-close href="#/app/announcements">
+          Announcements
+        </ion-item>
         <!-- <ion-item menu-close href="#/app/search">
           Search
         </ion-item>
