--- a/www/templates/questions.html
+++ b/www/templates/questions.html
@@ -10,7 +10,7 @@
   </div>
   <ion-content class="has-subheader">
     <ion-list>
-      <ion-item ng-repeat="question in questions">
+      <ion-item ng-repeat="question in questions track by $index">
 
         <!-- <ion-label ng-if="question.type == 'heading'"><b>{{question.text}}</b></ion-label>
 
